# TextandFlex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md.new  Message logs_converted.xlsx  PHONE_CONVERTER_README.md  PhoneRecordsAnalyzer_PRD.md  README.md  ROADMAP.md  TURNOVER_RESPONSE_ANALYZER.md  analyze_linting.py  assistant_instructions.md  changelog.md  codebase_package.txt  conftest.py  converter_exceptions.py  create_icon.py  create_test_data.py  ersthumpDocumentsaugment-projectsQlix  file_converter.py  find_linting_issues.py  gui.py  implementation_plan.md  implementation_roadmap_phase1.md  implementation_roadmap_phase2.md  implementation_roadmap_phase3.md  integration_test_results.txt  line.txt  metacognitive_instructions.md  method_fixes.py  package_codebase.py  pattern_detector_integration.md  phone_records_converter_gui.py  pyproject.toml  pytest.ini  requirements.txt  response_analyzer_integration_contract.md  response_analyzer_tests.py  response_analyzer_turnover.md  run_analyzer_tests.bat  run_gui.py  (+13 more)
data/: README.md
docs/: compatibility_layer.md  documentation_index.md  ml_integration_guide.md  ml_models_documentation.md  versioning.md
docs/GUI_docs/: changelog.md  gui_implementation_plan.md  (+4 more)
scripts/: custom_lint_rules.py  import_analyzer.py
src/: app.py  config.py  logger.py  phone_record_parser.py
temp_backup/: app.py
test_data/: sample_phone_records.xlsx
tests/: conftest.py  test_app.py  test_config.py  test_gui.py  test_gui_accessibility.py  test_gui_integration.py  test_gui_interactions.py  test_gui_performance.py  test_logger.py
(+150 files in other folders)
