[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
markers =
    unit: Unit tests
    integration: Integration tests
    performance: Performance tests
    slow: Tests that take a long time to run
addopts = -v --strict-markers

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .
